--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,7 @@ name = "pypi"
 
 [packages]
 requests = "*"
-schedule = "*"
-python-crontab = "*"
-pytelegrambotapi = "*"
+pyTelegramBotAPI = "*"
 
 [dev-packages]
 
